[package]
description = "cli tool for open.go.kr"
name = "ogk"
version = "1.1.0"
authors = ["pretty00butt <hoonyland.newsletter@gmail.com>"]
edition = "2021"
license-file = "LICENSE"
homepage = "https://githb.com/opengirok/ogk"
documentation = "https://githb.com/opengirok/ogk"
repository = "https://githb.com/opengirok/ogk"
readme = "README.md"

[dependencies]
async-trait = "0.1.52"
base64 = "0.13.0"
bcrypt = "0.12"
bytes = "1.0.1"
chrono = "0.4"
clap = { version = "3.0.14", features = ["derive"] }
csv = "1.1.6"
dirs = "4.0.0"
dotenv = "0.15.0"
futures = "0.3"
git2 = "0.14"
reqwest = { version = "0.11.1", features = ["blocking", "cookies", "gzip", "json"] }
rust-crypto = "^0.2"
serde = "1.0.114"
serde_json = "1.0"
toml = "0.5.8"
tokio = { version = "1.2.0", features = ["full"] }
regex = "1.5"
indicatif = "0.16"
console = "0.15"

[[bin]]
name = "ogk"
path = "src/main.rs"
